# tinygltf

./: .gitignore  .travis-before-install.sh  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.rapidjson.txt  LICENSE.tinyktx  Makefile  README.md  appveyor.yml  example.cc  examples.bat  gltf.schema.resolved.inc  loader_example.cc  lodepng.h  picojson.h  premake4.lua  premake5.lua  rapidjson-amalgamation.h  stb_image.h  stb_image_write.h  test.cc  test_runner.py  tiny_gltf - Copy.h  tiny_gltf.h  tiny_gltf.h.bak  tiny_gltf_loader.h  tiny_gltf_util.h  tinyktx.h  vcsetup.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml  mingw-w64-msys2.yml
cmake/: TinyGLTFConfig.cmake  TinyGLTFConfig.cmake.in  glTFConfig.cmake
examples/alembic_to_gltf/: Makefile  README.md  abc2gltf.cc  main.cc  suzanne.abc
examples/anim-dump/: Makefile  README.md  anim-dump.cc
examples/basic/: .gitignore  README.md  main.cpp  premake5.lua  shaders.cpp  shaders.h  window.cpp  window.h
examples/basic/basic/: basic.sln  basic.vcxproj  basic.vcxproj.filters  packages.config
examples/basic/basic/Release/: basic.exe.recipe  basic.ipdb  basic.vcxproj.FileListAbsolute.txt
examples/basic/basic/Release/basic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  basic.lastbuildstate  basic.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/build-gltf/: CMakeLists.txt  Makefile  create_triangle_gltf.cpp
examples/common/: README.md  clipp.LICENSE  clipp.h  findOpenGLGlewGlut.lua  matrix.cc  matrix.h  picojson.h  tinyexr.h  trackball.cc
examples/common/OpenGLWindow/: MacOpenGLWindow.h  MacOpenGLWindow.mm  Win32OpenGLWindow.cpp  Win32Window.cpp  Win32Window.h  X11OpenGLWindow.cpp  X11OpenGLWindow.h
examples/common/glm/: .gitignore  CMakeLists.txt  manual.md  readme.md
examples/common/imgui/: ImGuizmo.cpp  imgui_impl_btgui.cpp  imgui_impl_btgui.h
examples/common/nativefiledialog/src/: nfd_common.c  nfd_win.cpp
examples/common/nativefiledialog/test/: SConstruct  test_opendialog.c  test_opendialogmultiple.c  test_savedialog.c
examples/cyhair_to_gltf/: Makefile  README.md  cyhair2gltf.cc  cyhair_loader.cc  cyhair_loader.h
examples/dxview/: CMakeLists.txt  README.md
examples/dxview/res/: gray.hlsl  lighting.hlsl  primitive.hlsl
examples/dxview/src/: Viewer.cc  Viewer.h  dxview.cc
examples/gltfutil/: CMakeLists.txt  gltfuilconfig.h  main.cc  stb_image_write.h  texture_dumper.cc  texture_dumper.h
examples/glview/: .gitignore  CMakeLists.txt  README.md  glview.cc  glview.sln  premake4.lua  premake5.lua  shader.frag  shader.vert
examples/glview/cmake/: GLFW3Config.cmake
examples/glview/glview/: glview.vcxproj  glview.vcxproj.filters
examples/mesh-conv/: Makefile  Makefile.meson  README.md  bootstrap-meson.sh  mesh-conv.cc  mesh-util.cc  mesh-util.hh  meson.build  tinygltf_impl.cc
examples/mesh-conv/sandbox/: README.md  concat_mesh.py  replace_attrib.py
examples/mesh-dump/: Makefile  README.md  mesh-dump.cc
examples/mesh-modify/: Makefile  README.md  mesh-modify.cc  mesh-util.cc  mesh-util.hh  meson.build
examples/raytrace/: README.md  config.json  gltf-loader.cc  gltf-loader.h  image-impl.cc  img-loaders.cc  imgui.ini  main.cc  material.h  matrix.cc  mesh.h  nanort.cc  nanort.h  nanosg.h  obj-loader.cc  obj-loader.h  premake5.lua  render-config.cc  render-config.h  render.cc  render.h  stbi-impl.cc  viwewer.make
examples/saver/: Makefile.dev  README.md  main.cc
examples/skinning/: HandmadeMath.h  README.md  main.cc  morph-targets.cc  premake5.lua  shader.frag  shader.vert  simple-skin.gltf  skinning.cc  skinning.h
examples/validator/: CMakeLists.txt  LICENSE.json-schema-validator.MIT  Makefile  README.md  tinygltf-validate.cc
examples/validator/app/: tinygltf-validate.cc
examples/validator/src/: json-schema-draft4.json.cpp  json-schema.hpp  json-uri.cpp  json-validator.cpp
examples/validator/valijson/include/compat/: optional.hpp
examples/validator/valijson/include/valijson/: constraint_builder.hpp  schema.hpp  schema_parser.hpp  subschema.hpp  validation_results.hpp  validation_visitor.hpp  validator.hpp
examples/validator/valijson/include/valijson/adapters/: adapter.hpp  basic_adapter.hpp  frozen_value.hpp  json11_adapter.hpp  jsoncpp_adapter.hpp  nlohmann_json_adapter.hpp  picojson_adapter.hpp  poco_json_adapter.hpp  property_tree_adapter.hpp  qtjson_adapter.hpp  rapidjson_adapter.hpp
examples/validator/valijson/include/valijson/constraints/: basic_constraint.hpp  concrete_constraints.hpp  constraint.hpp  constraint_visitor.hpp
examples/validator/valijson/include/valijson/internal/: custom_allocator.hpp  debug.hpp  json_pointer.hpp  json_reference.hpp  optional.hpp  uri.hpp
examples/validator/valijson/include/valijson/utils/: file_utils.hpp  json11_utils.hpp  jsoncpp_utils.hpp  nlohmann_json_utils.hpp  picojson_utils.hpp  poco_json_utils.hpp  property_tree_utils.hpp  qtjson_utils.hpp  rapidjson_utils.hpp  utf8_utils.hpp
examples/writer/: Makefile  README.md  writer.cc
experimental/: README.md  gen.py
models/BoundsChecking/: integer-out-of-bounds.gltf  invalid-buffer-index.gltf  invalid-buffer-view-index.gltf  invalid-primitive-indices.gltf
models/Cube-KTX/: Cube.gltf  Cube_BaseColor.ktx  Cube_MetallicRoughness.ktx  README.md
models/Cube-texture-ext/: Cube-textransform.gltf  README.md
models/CubeImageUriSpaces/: CubeImageUriMultipleSpaces.gltf  CubeImageUriSpaces.gltf
models/Extensions-issue97/: test.gltf
models/Extensions-overwrite-issue261/: issue-261.gltf
models/SparseMorphTargets-issue281/: singleBlendshapeCube_sparse.glb
models/regression/: unassigned-skeleton.gltf  zero-sized-bin-chunk-issue-440.glb
tests/: Makefile  issue-261.gltf  issue-416.gltf  issue-492.glb  tester.cc
tests/fuzzer/: README.md  fuzz_gltf.cc  meson.build
tools/schema_ref_resolver/: README.md  generate_single_schema_doc.py  glTF.schema.resolved.inc  glTF.schema.resolved.json  ref_resolver.py
wasm/: Makefile  README.md
(+14 files in other folders)
